# alphafix

./: .gitignore  Cargo.toml  README.md  USAGE.md
.github/workflows/: release.yml
src/: cli.rs  lib.rs  main.rs
src/cli/: cli.rs  main.rs
