[package]
name = "alphafix"
authors = ["hs747 <henryshaw747@gmail.com"]
description = "CLI & file explorer tool to bleed colors to transparent pixels for game engines"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
image = "0.24.5"
clap = {version = "4.1.4", features = ["derive"]}